--- a/index.html
+++ b/index.html
@@ -3,6 +3,15 @@
     <head>
         <meta charset="UTF-8">
         <title>一緒にメイプルM攻略しようず | デンデン跡地</title>
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-9EEF9RHTRT"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+
+            gtag('config', 'G-9EEF9RHTRT');
+        </script>
     </head>
     <body>
         <h1>一緒にメイプルM攻略しようず</h1>
