--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         </script>
     </head>
     <body>
-        <h1>一緒にメイプルM攻略しようず</h1>
+        <h1>一緒に 神ゲー の メイプルM 攻略 しようず</h1>
         <h2>ここは何？</h2>
         <p style="margin-left: 1em;">検索で引っかかるために作りました<br>
         discordやspreadsheetへの誘導するのが目的のサイトです</p>
