--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <a href="https://docs.google.com/spreadsheets/d/1_OE7OHcdal55FVC5kjr-uvzHqgfgF1IulTxtby_dsaU/edit#gid=1555911667">ロイヤル ヘア/整形 一覧</a><br>
         <a href="https://docs.google.com/spreadsheets/d/1fDyPV_4pcE_r2VwgvVwV6-7P_esoyxzw-W8ucg1SoFU/edit#gid=1064914672">狩場別メル効率表</a><br>
         <a href="https://docs.google.com/spreadsheets/d/1AmPAAkl4ShoRMypQJPCxpaDU8XzNbPp89-RuEhYbhBs/edit?usp=sharing">獲得経験値系 一覧</a><br>
-        <a href="https://docs.google.com/spreadsheets/d/1XAtpg0tIynNvur65DklaEg7xWfJm3bBxHPef_Nl66XY/edit?usp=sharing">デイリーハントとミニダンジョン系 一覧</a><br>
+        <a href="https://docs.google.com/spreadsheets/d/1BWLoQ4JaXMyTu-RSO2tDoZ-8ntpFjN2ZV2fZlX8hznU/edit#gid=0">メイプルM 相場</a><br>
         </p>
         <br>
         <h2>discordサーバの紹介</h2>
